// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radiobutton renders 1`] = `
<div
  className="flex flex-col"
>
  <h4
    className="mb-2"
  >
    Please select your age:
  </h4>
  <label
    className="sc-iWQIae ezxdbj"
    htmlFor="age1"
  >
    <input
      aria-label="0 - 30"
      className="sc-dVfXgE kBRHur"
      id="age1"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-YLmAF fMkZic"
    >
      <div
        className="sc-iaSSRK iVxrBa"
      />
    </span>
    <span
      className="sc-gavXuf dPClhm"
    >
      0 - 30
    </span>
  </label>
  <label
    className="sc-iWQIae ezxdbj"
    htmlFor="age2"
  >
    <input
      aria-label="31 - 60"
      className="sc-dVfXgE kBRHur"
      id="age2"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-YLmAF fMkZic"
    >
      <div
        className="sc-iaSSRK iVxrBa"
      />
    </span>
    <span
      className="sc-gavXuf dPClhm"
    >
      31 - 60
    </span>
  </label>
  <label
    className="sc-iWQIae ezxdbj"
    htmlFor="age3"
  >
    <input
      aria-label="61 - 100"
      className="sc-dVfXgE kBRHur"
      id="age3"
      name="age"
      onClick={[Function]}
      type="radio"
    />
    <span
      className="sc-YLmAF fMkZic"
    >
      <div
        className="sc-iaSSRK iVxrBa"
      />
    </span>
    <span
      className="sc-gavXuf dPClhm"
    >
      61 - 100
    </span>
  </label>
</div>
`;

exports[`Radiobutton renders Checked 1`] = `
<label
  className="sc-iWQIae ezxdbj"
>
  <input
    checked={true}
    className="sc-dVfXgE kBRHur"
    onClick={[Function]}
    readOnly={true}
    type="radio"
  />
  <span
    className="sc-YLmAF fMkZic"
  >
    <div
      className="sc-iaSSRK iVxrBa"
    />
  </span>
  <span
    className="sc-gavXuf dPClhm"
  >
    Checked radio button
  </span>
</label>
`;

exports[`Radiobutton renders Disabled 1`] = `
<label
  className="sc-iWQIae ezxdbj"
>
  <input
    className="sc-dVfXgE kBRHur"
    disabled={true}
    onClick={[Function]}
    type="radio"
  />
  <span
    className="sc-YLmAF fMkZic"
  >
    <div
      className="sc-iaSSRK iVxrBa"
    />
  </span>
  <span
    className="sc-gavXuf dPClhm"
  >
    Disabled radio button
  </span>
</label>
`;

exports[`Radiobutton renders No label 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <label
      className="sc-iWQIae ezxdbj"
      htmlFor="button1"
    >
      <input
        className="sc-dVfXgE kBRHur"
        id="button1"
        name="button"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-YLmAF fMkZic"
      >
        <div
          className="sc-iaSSRK iVxrBa"
        />
      </span>
    </label>
  </div>
</div>
`;

exports[`Radiobutton renders RTL 1`] = `
<div
  dir="rtl"
>
  <div
    className="flex flex-col"
  >
    <h4
      className="mb-2"
    >
      Please select your age:
    </h4>
    <label
      className="sc-iWQIae ezxdbj"
      htmlFor="age1"
    >
      <input
        aria-label="0 - 30"
        className="sc-dVfXgE kBRHur"
        id="age1"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-YLmAF fMkZic"
      >
        <div
          className="sc-iaSSRK iVxrBa"
        />
      </span>
      <span
        className="sc-gavXuf dPClhm"
      >
        0 - 30
      </span>
    </label>
    <label
      className="sc-iWQIae ezxdbj"
      htmlFor="age2"
    >
      <input
        aria-label="31 - 60"
        className="sc-dVfXgE kBRHur"
        id="age2"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-YLmAF fMkZic"
      >
        <div
          className="sc-iaSSRK iVxrBa"
        />
      </span>
      <span
        className="sc-gavXuf dPClhm"
      >
        31 - 60
      </span>
    </label>
    <label
      className="sc-iWQIae ezxdbj"
      htmlFor="age3"
    >
      <input
        aria-label="61 - 100"
        className="sc-dVfXgE kBRHur"
        id="age3"
        name="age"
        onClick={[Function]}
        type="radio"
      />
      <span
        className="sc-YLmAF fMkZic"
      >
        <div
          className="sc-iaSSRK iVxrBa"
        />
      </span>
      <span
        className="sc-gavXuf dPClhm"
      >
        61 - 100
      </span>
    </label>
  </div>
</div>
`;
